--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,28 @@
 {
-  "name": ".",
-  "module": "index.ts",
+  "name": "server",
+  "module": "index.js",
   "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
+  "scripts": {
+    "dev":"nodemon -r dotenv/config --experimental-json-modules src/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "@types/bun": "latest",
+    "prettier": "^3.0.3"
+  },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^8.1.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "mongoose-aggregate-paginate-v2": "^1.0.7",
+    "multer": "^1.4.5-lts.1"
   }
 }
