--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "typescript": "^5.0.0"
   },
   "scripts": {
-    "dev":"nodemon -r dotenv/config --experimental-json-modules src/index.js"
+    "dev":"nodemon -r dotenv/config --experimental-json-modules src/index.js",
+    "build": "tsc"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
