--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.1.0",
     "@tinymce/tinymce-react": "github:tinymce/tinymce-react",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "html-react-parser": "^5.1.2",
